<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignIn_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="751dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/logo"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/todo" />


                <TextView
                    android:id="@+id/cafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/porwal_s_cafe"
                    android:textColor="#AF834D"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signinEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/editviewbackground"
                    android:gravity="center"
                    android:hint="@string/porwalharsh007_gmail_com"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:ems="10"
                    android:padding="10dp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/signinPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/editviewbackground"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/pas"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/btnSignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#C4937F38"
                    android:text="@string/sign_in"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/btn_gradient" />

                    <TextView
                        android:id="@+id/or_with"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/or_with"
                        android:textColor="#070707"
                        android:textColorHighlight="#000000" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/btn_gradient" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/facebookLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="#1E63D1"
                        android:fontFamily="sans-serif-thin"
                        android:gravity="center"
                        android:text="@string/facebook"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/googleLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="#D61D1D"
                        android:fontFamily="sans-serif-thin"
                        android:gravity="center"
                        android:text="@string/google"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/want_to_creat_account_signup"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </ScrollView>


    </LinearLayout>


</LinearLayout>