<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AB363535">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/todo"
                    android:padding="8dp"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/porwal_cafe"
                    android:textColor="#F6F6F6"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="#6B8E47"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:text="@string/login"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="65dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#6B8E47"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:text="@string/register"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>